design: better copy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -287,9 +287,9 @@
       "title": "Save Time"
     },
     "cozy-assistant": {
-      "description": "Health accounts of your entire family automagically updated",
+      "description": "Health accounts of your entire family automatically updated",
       "title": "Cozy works for you"
     },
-    "title": "Connect to your banking space"
+    "title": "Connect your bank accounts"
   }
 }
