--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -265,7 +265,7 @@
       "title": "Seuil de solde",
       "description": "Vous receverez un email, si votre solde est inférieur à"
     },
-    "if_movement_greater": {
+    "if_operation_greater": {
       "title": "Montant de mouvement",
       "description": "Vous receverez une notification, si un mouvement est supérieur à",
       "notification": {
@@ -278,7 +278,9 @@
           "content": "%{label}"
         },
         "others": {
-          "title": "%{movement_length} mouvements de plus de %{greater_than}€"
+          "title": "%{operationsLength} mouvements de plus de %{maxAmount}€",
+          "debitContent": "Dépense de %{amount}%{currency} avec le libellé %{label}.",
+          "creditContent": "Versement de %{amount}%{currency} avec le libellé %{label}."
         }
       }
     },
