--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -277,7 +277,7 @@
   },
 
   "Onboarding": {
-    "connect-bank-account": "Connect your bank account",
+    "connect-bank-account": "Connect your bank accounts",
     "manage-budget": {
       "description": "The situation of all your accounts in 1 glance",
       "title": "Control your budget"
