--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -263,11 +263,11 @@
     "title": "Notifications",
     "if_balance_lower": {
       "title": "Seuil de solde",
-      "description": "Vous receverez un email, si votre solde est inférieur à"
+      "description": "Vous recevrez un email, si votre solde est inférieur à"
     },
     "if_operation_greater": {
       "title": "Montant de mouvement",
-      "description": "Vous receverez une notification, si un mouvement est supérieur à",
+      "description": "Vous recevrez une notification, si un mouvement est supérieur à",
       "notification": {
         "debit": {
           "title": "Dépense de %{amount}%{currency}",
@@ -290,15 +290,15 @@
     },
     "when_month_revenue": {
       "title": "Versement de salaire",
-      "description": "Vous receverez un email à la réception de votre salaire chaque mois."
+      "description": "Vous recevrez un email à la réception de votre salaire chaque mois."
     },
     "weekly_summary": {
       "title": "Synthèse hebdomadaire",
-      "description": "Vous receverez un récapitulatif de vos dépenses et de vos revenus tous les lundis de chaque semaine."
+      "description": "Vous recevrez un récapitulatif de vos dépenses et de vos revenus tous les lundis de chaque semaine."
     },
     "monthly_summary": {
       "title": "Synthèse mensuelle",
-      "description": "Vous receverez un récapitulatif de vos dépenses et de vos revenus tous les premiers de chaque mois."
+      "description": "Vous recevrez un récapitulatif de vos dépenses et de vos revenus tous les premiers de chaque mois."
     }
   },
 
