--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -267,8 +267,8 @@
       "notification": {
         "one": {
           "title": "Alerte solde : le compte '%{label}' est à %{balance}%{currency}",
-          "debitContent": "Dépense de %{amount}%{currency} avec le libellé '%{label}'.",
-          "creditContent": "Versement de %{amount}%{currency} avec le libellé '%{label}'."
+          "debitContent": "Dépense de %{amount}%{currency} : '%{label}'.",
+          "creditContent": "Versement de %{amount}%{currency} : '%{label}'."
         },
         "several": {
           "title": "%{accountsLength} comptes sont en dessous de votre seuil de %{lowerBalance}%{currency}",
