🐝 fix: translations were not accurate

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -140,23 +140,23 @@
     },
     "subcategories": {
       "taxi": "Taxi",
-      "telecom": "Telecom",
+      "telecom": "Télecommunication",
       "giftsOffered": "Cadeaux offerts",
-      "eduBooksAndSupplies": "Livres et fournitures Edu",
+      "eduBooksAndSupplies": "Livres et fournitures scolaire",
       "homeImprovement": "Amélioration de l'habitat",
       "parkingAndToll": "Parking et péage",
       "goingOutAndTravel": "Sortir et voyager",
       "retirement": "Retraite",
       "vehiculeInsurance": "Assurance véhicule",
       "childCare": "Garde d'enfants",
-      "dressing": "Pansement",
-      "incomeTheme": "le revenu",
+      "dressing": "Vêtements",
+      "incomeTheme": "Revenu",
       "activities": "Activités",
       "internalTransfer": "Transfert interne",
-      "bankFees": "frais bancaires",
-      "incomeCat": "le revenu",
+      "bankFees": "Frais bancaires",
+      "incomeCat": "Revenu",
       "rentalIncome": "Revenus locatifs",
-      "tobaccoPress": "Presse a tabac",
+      "tobaccoPress": "Bureau tabac",
       "loanCredit": "Crédit de prêt",
       "activityEquipments": "Équipements d'activités",
       "professionalExpenses": "Frais professionnels",
@@ -170,33 +170,33 @@
       "activityLessons": "Cours d'activité",
       "vehiculePurchase": "Achat de véhicules",
       "financialAdvisor": "Conseiller financier",
-      "goingOutEntertainment": "Sortir du divertissement",
-      "homeAssistance": "Assistance a domicile",
+      "goingOutEntertainment": "Sorties/divertissements",
+      "homeAssistance": "Assistance à domicile",
       "socialTax": "Taxes sociales",
       "health": "Santé",
       "pets": "Animaux domestiques",
       "excludeFromBudgetCat": "Exclus du budget",
-      "investmentBuySell": "Investissement acheter vendre",
-      "pensionPaid": "Pension payée",
+      "investmentBuySell": "Investissements",
+      "pensionPaid": "Pensions",
       "booksMoviesMusic": "Livres musique de films",
       "restaurantsAndBars": "Restaurants et bars",
       "transportation": "Transport",
-      "power": "Puissance",
-      "dailyLife": "La vie quotidienne",
+      "power": "Energie",
+      "dailyLife": "Vie quotidienne",
       "dividends": "Dividendes",
       "supermarket": "Supermarché",
       "tuition": "Cours",
       "water": "Eau",
-      "homeHardware": "Home Hardware",
+      "homeHardware": "Quincaillerie",
       "consumerLoan": "Prêt a la consommation",
       "publicTransportation": "Transport public",
       "donationsReceived": "Dons reçus",
-      "post": "Service apres-vente",
+      "post": "Service après-vente",
       "electronicsAndMultimedia": "Électronique et multimédia",
       "studentLoan": "Prêt étudiant",
-      "kids": "Des gamins",
-      "expenseTheme": "Theme des dépenses",
-      "eduLessons": "Cours Edu",
+      "kids": "Enfants",
+      "expenseTheme": "Thème des dépenses",
+      "eduLessons": "Cours",
       "atm": "Distributeur de billets",
       "privateParking": "Parking privé",
       "vehiculeGas": "Gaz de véhicules",
@@ -216,7 +216,7 @@
       "incomeTax": "Impôt sur le revenu",
       "creditCardPayment": "Paiement par carte de crédit",
       "vehiculeLoan": "Prêt véhicule",
-      "tax": "Impôt",
+      "tax": "Impôts",
       "excludeFromBudgetTheme": "Exclus du budget",
       "rent": "Location",
       "goingOutCulture": "Sortir de la culture",
@@ -224,13 +224,13 @@
       "shoppingECommerce": "Shopping et commerce électronique",
       "travel": "Voyage",
       "hobbyAndPassion": "Loisirs et passion",
-      "snaksAndworkMeals": "Snaks et repas de travail",
-      "uncategorized": "Non classé",
-      "friendBorrowing": "Prêt d'ami",
+      "snaksAndworkMeals": "Snacks et repas de travail",
+      "uncategorized": "Non catégorisé",
+      "friendBorrowing": "Prêt à un ami",
       "potentialTransfer": "Transfert potentiel",
       "healthExpenses": "Frais de santé",
       "additionalIncome": "Revenu supplémentaire",
-      "journey": "Périple",
+      "journey": "Voyage",
       "services": "Prestations de service",
       "educationAndTraining": "Éducation et formation",
       "savings": "Des économies",
