🐝 fix: translations were not accurate

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -125,7 +125,7 @@
   "Data": {
     "categories": {
       "children": "Enfants",
-      "daily-life": "Vie quotidienne",
+      "dailyLife": "Vie quotidienne",
       "education": "Education, formation",
       "health": "Santé",
       "homeAndRealEstate": "Logement, immobilier",
@@ -136,7 +136,9 @@
       "taxes": "Impôts, taxes",
       "transportation": "Transports, véhicules",
       "trips": "Sorties, voyages",
-      "uncategorized": "À catégoriser"
+      "uncategorized": "À catégoriser",
+      "goingOutAndTravel": "Sorties/voyages",
+      "activities": "Activités"
     },
     "subcategories": {
       "taxi": "Taxi",
@@ -178,7 +180,7 @@
       "excludeFromBudgetCat": "Exclus du budget",
       "investmentBuySell": "Investissements",
       "pensionPaid": "Pensions",
-      "booksMoviesMusic": "Livres musique de films",
+      "booksMoviesMusic": "Livres, musiques, films",
       "restaurantsAndBars": "Restaurants et bars",
       "transportation": "Transport",
       "power": "Energie",
@@ -189,7 +191,7 @@
       "water": "Eau",
       "homeHardware": "Quincaillerie",
       "consumerLoan": "Prêt a la consommation",
-      "publicTransportation": "Transport public",
+      "publicTransportation": "Transports publics",
       "donationsReceived": "Dons reçus",
       "post": "Service après-vente",
       "electronicsAndMultimedia": "Électronique et multimédia",
@@ -222,15 +224,15 @@
       "goingOutCulture": "Sortir de la culture",
       "check": "Vérifier",
       "shoppingECommerce": "Shopping et commerce électronique",
-      "travel": "Voyage",
+      "travel": "Voyages",
       "hobbyAndPassion": "Loisirs et passion",
-      "snaksAndworkMeals": "Snacks et repas de travail",
+      "snaksAndworkMeals": "Snacks et repas au travail",
       "uncategorized": "Non catégorisé",
       "friendBorrowing": "Prêt à un ami",
       "potentialTransfer": "Transfert potentiel",
       "healthExpenses": "Frais de santé",
       "additionalIncome": "Revenu supplémentaire",
-      "journey": "Voyage",
+      "journey": "Voyages",
       "services": "Prestations de service",
       "educationAndTraining": "Éducation et formation",
       "savings": "Des économies",
