--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -127,7 +127,7 @@
       "activities": "Activités",
       "dailyLife": "Vie quotidienne",
       "education": "Education, formation",
-      "excludeFromBudgetTheme": "Hors budget",
+      "excludeFromBudgetCat": "Hors budget",
       "goingOutAndTravel": "Sorties/voyages",
       "health": "Santé",
       "homeAndRealEstate": "Logement, immobilier",
