--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -329,5 +329,52 @@
       "title": "Cozy works for you"
     },
     "title": "Connect your bank accounts"
+  },
+
+  "mobile": {
+    "onboarding": {
+      "welcome": {
+        "title1": "Welcome to Cozy",
+        "title2": "Your own personal cloud",
+        "button": "Sign in to your Cozy",
+        "sign_up": "Sign up now!",
+        "no_account_link": "Don’t have an account? Request one here."
+      },
+      "server_selection": {
+        "description": "This is the web address you use to access your Cozy.",
+        "cozy_address_placeholder": "tonystark.mycozy.cloud",
+        "button": "Next",
+        "wrong_address_with_email": "You typed an email address. To connect on your cozy you must type its url, something like https://tonystark.mycozy.cloud",
+        "wrong_address_v2": "You have just entered the address of old Cozy version. This application is only compatible with the latest version. [Please refer to our site for more information.](https://blog.cozycloud.cc/post/2016/11/21/On-the-road-to-Cozy-version-3?lang=en)",
+        "wrong_address": "This address doesn’t seem to be a cozy. Please check the address you provide.",
+        "wrong_address_cosy": "Woops, the address is not correct. Try with \"mycozy.cloud\" with a \"z\"!"
+      },
+      "password": {
+        "placeholder": "Password",
+        "description": "You need to choose a strong password. Use numbers, uppercase latters, special characters…"
+      },
+      "email": {
+        "cozy_email_placeholder": "tony.stark@cozy.cc",
+        "description": "We will send you an email to confirm the creation of your Cozy.",
+        "invalid": "This doesn't seem to be a valid email address.",
+        "taken": "There's already a Cozy bound to this email address."
+      },
+      "instance": {
+        "placeholder": "tonystark",
+        "description": "This is the web address you use to sign it to your Cozy.  It might be a good idea to write it down.",
+        "existing": "This internet address is already used. Try adding extra characters.",
+        "blacklisted": "This internet address is not available.",
+        "invalid": "This internet address is not valid."
+      },
+      "waiting": {
+        "description": "Preparing *%{domain}*…"
+      }
+    },
+    "revoked": {
+      "title": "Access revoked",
+      "description": "It appears you revoked this device from your Cozy. If you didn't, please let us know at contact@cozycloud.cc. All your local data related to your Cozy will be removed.",
+      "loginagain": "Log in again",
+      "logout": "Log out"
+    }
   }
 }
