--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -251,7 +251,9 @@
     "no-groups": "Avec les groupes, vous pouvez facilement rassembler plusieurs comptes, n'hésitez pas à en créer un !",
     "back-to-groups": "Revenir aux groupes",
     "rename": "Renommer",
-    "save": "Sauver"
+    "save": "Sauver",
+    "included": "Inclus",
+    "account-number": "Numéro du compte"
   },
 
 
