--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -111,7 +111,7 @@
       "dressing": "Dressing",
       "pets": "Pets",
       "telecom": "Telecom",
-      "snaksAndworkMeals": "Snaks and work meals",
+      "snaksAndworkMeals": "Snacks and work meals",
       "charity": "Charity",
       "giftsOffered": "Gifts offered",
       "personalCare": "Personal care",
