--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -193,7 +193,7 @@
       "goingOutAndTravel": "Outings, trips",
       "health": "Health",
       "homeAndRealEstate": "Housing, real estate",
-      "incomeCat": "earnings",
+      "incomeCat": "Earnings",
       "kids": "Children",
       "services": "Services",
       "tax": "Taxes, taxes",
