feat: rename category Activités to Sports et loisirs

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -139,7 +139,7 @@
 
   "Data": {
     "categories": {
-      "activities": "Activités",
+      "activities": "Sports, loisirs",
       "dailyLife": "Vie quotidienne",
       "educationAndTraining": "Education, formation",
       "excludeFromBudgetCat": "Hors budget",
