feat: add missing subcategories to Kids category

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -145,6 +145,7 @@
       "financialAdvisor": "Financial advisor",
       "kids": "Kids",
       "kidsAllowance": "Kids allowance",
+      "kidsOthers": "Others: Kids",
       "schoolRestaurant": "School restaurant",
       "childCare": "Child care",
       "schoolInsurance": "School insurance",
