--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -225,7 +225,8 @@
       "legalCounsel": "Conseils juridiques",
       "interests": "Intérêts",
       "vehiculeMaintenance": "Entretien des véhicules",
-      "kidsAllowance": "Allocation pour enfants",
+      "kidsAllowance": "Argent de poche",
+      "kidsOthers": "Autres : Enfants",
       "charity": "Charité",
       "replacementIncome": "Revenu de remplacement",
       "incomeTax": "Impôt sur le revenu",
