--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -155,23 +155,23 @@
     },
     "subcategories": {
       "taxi": "Taxi",
-      "telecom": "Télecommunication",
+      "telecom": "Internet, TV, télécom",
       "giftsOffered": "Cadeaux offerts",
-      "eduBooksAndSupplies": "Livres et fournitures scolaire",
+      "eduBooksAndSupplies": "Livres, fournitures (éducation)",
       "homeImprovement": "Amélioration de l'habitat",
       "parkingAndToll": "Parking et péage",
       "goingOutAndTravel": "Sortir et voyager",
       "retirement": "Retraite",
       "vehiculeInsurance": "Assurance véhicule",
       "childCare": "Garde d'enfants",
-      "dressing": "Vêtements",
+      "dressing": "Habillement",
       "incomeTheme": "Revenu",
       "activities": "Activités",
       "internalTransfer": "Transfert interne",
       "bankFees": "Frais bancaires",
       "incomeCat": "Revenu",
       "rentalIncome": "Revenus locatifs",
-      "tobaccoPress": "Bureau tabac",
+      "tobaccoPress": "Tabac/Presse",
       "loanCredit": "Crédit de prêt",
       "activityEquipments": "Équipements d'activités",
       "professionalExpenses": "Frais professionnels",
@@ -189,7 +189,7 @@
       "homeAssistance": "Assistance à domicile",
       "socialTax": "Taxes sociales",
       "health": "Santé",
-      "pets": "Animaux domestiques",
+      "pets": "Animaux",
       "excludeFromBudgetCat": "Exclus du budget",
       "investmentBuySell": "Investissements",
       "pensionPaid": "Pensions",
@@ -199,26 +199,26 @@
       "power": "Energie",
       "dailyLife": "Vie quotidienne",
       "dividends": "Dividendes",
-      "supermarket": "Supermarché",
+      "supermarket": "Alimentation, supermarché",
       "tuition": "Cours",
       "water": "Eau",
       "homeHardware": "Quincaillerie",
-      "consumerLoan": "Prêt a la consommation",
+      "consumerLoan": "Remb. prêt conso",
       "publicTransportation": "Transports publics",
       "donationsReceived": "Dons reçus",
       "post": "Service après-vente",
       "electronicsAndMultimedia": "Électronique et multimédia",
-      "studentLoan": "Prêt étudiant",
+      "studentLoan": "Remb. prêt étudiant",
       "kids": "Enfants",
       "expenseTheme": "Thème des dépenses",
-      "eduLessons": "Cours",
+      "eduLessons": "Cours, soutien scolaire",
       "atm": "Distributeur de billets",
       "privateParking": "Parking privé",
       "vehiculeGas": "Gaz de véhicules",
       "realEstateTax": "Taxe foncière",
       "homeAndRealEstate": "Maison et immobilier",
       "homeCharges": "Frais à la maison",
-      "personalCare": "Soins personnels",
+      "personalCare": "Coiffeur, esthétique, cosmétique, soins",
       "healthInsurance": "Assurance santé",
       "activityIncome": "Revenu d'activité",
       "kidsActivities": "Activités pour enfants",
@@ -227,7 +227,7 @@
       "vehiculeMaintenance": "Entretien des véhicules",
       "kidsAllowance": "Argent de poche",
       "kidsOthers": "Autres : Enfants",
-      "charity": "Charité",
+      "charity": "Dons caritatifs",
       "replacementIncome": "Revenu de remplacement",
       "incomeTax": "Impôt sur le revenu",
       "creditCardPayment": "Paiement par carte de crédit",
@@ -237,10 +237,10 @@
       "rent": "Location",
       "goingOutCulture": "Sortir de la culture",
       "check": "Vérifier",
-      "shoppingECommerce": "Shopping et commerce électronique",
+      "shoppingECommerce": "Shopping/e-Commerce",
       "travel": "Voyages",
       "hobbyAndPassion": "Loisirs et passion",
-      "snaksAndworkMeals": "Snacks et repas au travail",
+      "snaksAndworkMeals": "Snacks, repas au travail",
       "uncategorized": "Non catégorisé",
       "friendBorrowing": "Prêt à un ami",
       "potentialTransfer": "Transfert potentiel",
@@ -251,7 +251,9 @@
       "educationAndTraining": "Éducation et formation",
       "savings": "Des économies",
       "realEstateLoan": "Prêt immobilier",
-      "homeInsurance": "Assurance habitation"
+      "homeInsurance": "Assurance habitation",
+      "dailyLifeOthers": "Autres : Dépenses vie courante",
+      "educationAndTrainingOther": "Autres : Éducation, formation"
     }
   },
 
