feat: add missing subcategories to health category

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -196,7 +196,9 @@
       "investmentBuySell": "Investment buy sell",
       "friendBorrowing": "Friend borrowing",
       "savings": "Savings",
-      "dailyLifeOthers": "Others: Everyday life"
+      "dailyLifeOthers": "Others: Everyday life",
+      "educationAndTrainingOthers": "Others: Education, training",
+      "healthOthers": "Others : Health"
     },
     "categories": {
       "activities": "Leisure, sports",
