--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -158,7 +158,7 @@
       "telecom": "Internet, TV, télécom",
       "giftsOffered": "Cadeaux offerts",
       "eduBooksAndSupplies": "Livres, fournitures (éducation)",
-      "homeImprovement": "Amélioration de l'habitat",
+      "homeImprovement": "Travaux, déco, jardin",
       "parkingAndToll": "Parking et péage",
       "goingOutAndTravel": "Sortir et voyager",
       "retirement": "Retraite",
@@ -173,16 +173,16 @@
       "rentalIncome": "Revenus locatifs",
       "tobaccoPress": "Tabac/Presse",
       "loanCredit": "Crédit de prêt",
-      "activityEquipments": "Équipements d'activités",
+      "activityEquipments": "Équipement sports, loisirs",
       "professionalExpenses": "Frais professionnels",
       "wealthTax": "Impôt sur le patrimoine",
-      "activityFees": "Frais d'activité",
-      "allocations": "Allocations",
+      "activityFees": "Cotis. sports, loisirs",
+      "allocations": "Aides et allocations",
       "schoolRestaurant": "Restaurant scolaire",
       "schoolInsurance": "Assurance scolaire",
       "vehiculeRental": "Location de véhicules",
       "toysAndGifts": "Jouets et cadeaux",
-      "activityLessons": "Cours d'activité",
+      "activityLessons": "Cours sports, loisirs",
       "vehiculePurchase": "Achat de véhicules",
       "financialAdvisor": "Conseiller financier",
       "goingOutEntertainment": "Sorties/divertissements",
@@ -193,21 +193,21 @@
       "excludeFromBudgetCat": "Exclus du budget",
       "investmentBuySell": "Investissements",
       "pensionPaid": "Pensions",
-      "booksMoviesMusic": "Livres, musiques, films",
+      "booksMoviesMusic": "Musique, livres, films",
       "restaurantsAndBars": "Restaurants et bars",
       "transportation": "Transport",
-      "power": "Energie",
+      "power": "Electricité, gaz, chauffage",
       "dailyLife": "Vie quotidienne",
       "dividends": "Dividendes",
       "supermarket": "Alimentation, supermarché",
       "tuition": "Inscription, scolarité",
       "water": "Eau",
-      "homeHardware": "Quincaillerie",
+      "homeHardware": "Meubles, équipement",
       "consumerLoan": "Remb. prêt conso",
       "publicTransportation": "Transports publics",
-      "donationsReceived": "Dons reçus",
+      "donationsReceived": "Cadeaux, dons reçus",
       "post": "Service après-vente",
-      "electronicsAndMultimedia": "Électronique et multimédia",
+      "electronicsAndMultimedia": "Électronique, multimédia",
       "studentLoan": "Remb. prêt étudiant",
       "kids": "Enfants",
       "expenseTheme": "Thème des dépenses",
@@ -217,10 +217,10 @@
       "vehiculeGas": "Gaz de véhicules",
       "realEstateTax": "Taxe foncière",
       "homeAndRealEstate": "Maison et immobilier",
-      "homeCharges": "Frais à la maison",
+      "homeCharges": "Charges logement",
       "personalCare": "Coiffeur, esthétique, cosmétique, soins",
       "healthInsurance": "Cotis mutuelle, prévoyance",
-      "activityIncome": "Revenu d'activité",
+      "activityIncome": "Salaire/Revenus d'activité",
       "kidsActivities": "Activités pour enfants",
       "legalCounsel": "Conseils juridiques",
       "interests": "Intérêts",
@@ -228,33 +228,36 @@
       "kidsAllowance": "Argent de poche",
       "kidsOthers": "Autres : Enfants",
       "charity": "Dons caritatifs",
-      "replacementIncome": "Revenu de remplacement",
+      "replacementIncome": "Revenus de remplacement",
       "incomeTax": "Impôt sur le revenu",
       "creditCardPayment": "Paiement par carte de crédit",
       "vehiculeLoan": "Prêt véhicule",
       "tax": "Impôts",
       "excludeFromBudgetTheme": "Exclus du budget",
-      "rent": "Location",
+      "rent": "Loyer",
       "goingOutCulture": "Sortir de la culture",
       "check": "Vérifier",
       "shoppingECommerce": "Shopping/e-Commerce",
       "travel": "Voyages",
-      "hobbyAndPassion": "Loisirs et passion",
+      "hobbyAndPassion": "Passion, hobby",
       "snaksAndworkMeals": "Snacks, repas au travail",
       "uncategorized": "Non catégorisé",
       "friendBorrowing": "Prêt à un ami",
       "potentialTransfer": "Transfert potentiel",
       "healthExpenses": "Frais, remb santé",
-      "additionalIncome": "Revenu supplémentaire",
+      "additionalIncome": "Revenus complémentaires",
       "journey": "Voyages",
       "services": "Prestations de service",
       "educationAndTraining": "Éducation et formation",
       "savings": "Des économies",
-      "realEstateLoan": "Prêt immobilier",
-      "homeInsurance": "Assurance habitation",
+      "realEstateLoan": "Remb. prêt immobilier",
+      "homeInsurance": "Assurance logement",
       "dailyLifeOthers": "Autres : Dépenses vie courante",
       "educationAndTrainingOthers": "Autres : Éducation, formation",
-      "healthOthers": "Autres : Santé, prévoyance"
+      "healthOthers": "Autres : Santé, prévoyance",
+      "homeAndRealEstateOthers": "Autres : Logement, immobilier",
+      "incomeCatOthers": "Autres : Revenus",
+      "activitiesOthers": "Autres : Sports, loisirs"
     }
   },
 
